--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,54 @@ body{
     position: absolute;
     
 }
+.dark{
+    color: #FFFFFF;
+    background-color: #1B1B1B;
+}
+.dark .navcontainer{
+    background-color: #1B1B1B;
+}
+.gris {
+    fill: #707070;
+}
+.bleu{
+    fill: #2c51a9;
+}
+.dark .gris {
+    fill: #ffffff;
+}
+.dark .bleu {
+    fill: #5AC139;
+}.dark .title{
+    color: #5AC139;
+}
+.dark .bgmenu__nav span{
+    color: #FFFFFF;
+}
+.dark .maincontainer span{
+    color: #FFFFFF;
+}
+.dark .maincontainer .title--underline{
+    background-color: #5AC139;
+}
+.dark .texte__hyperlink{
+    color: #5AC139;
+}
+.dark .menu--open{
+    background-color: #1B1B1B;
+}
+.dark .bgmenu__nav{
+    background-color: #1B1B1B;
+}
+.dark .bgmenu__nav a{
+    color: #5AC139;
+}
+.dark .picto-reseaux{
+    background-color: #5AC139;
+}
+.dark .texte__equipeprojet{
+    background-color: #5AC139;
+}
 .maincontainer{
     z-index: -300;
     top: 80px;
@@ -301,13 +349,16 @@ body{
     margin-top: 4px;
 }
 .lien{
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32.432' height='32.434' viewBox='0 0 32.432 32.434'%3E%3Cpath id='icons8-external-link' d='M33.579 2.991a1.8 1.8 0 0 0-.2.018H24.61a1.8 1.8 0 1 0 0 3.6h4.657L12.532 23.345a1.8 1.8 0 1 0 2.547 2.547L31.814 9.156v4.657a1.8 1.8 0 1 0 3.6 0V5.038a1.8 1.8 0 0 0-1.836-2.047ZM6.6 3.008A3.629 3.629 0 0 0 3 6.61V31.822a3.629 3.629 0 0 0 3.6 3.6H31.814a3.629 3.629 0 0 0 3.6-3.6V21.017a1.8 1.8 0 1 0-3.6 0V31.822H6.6V6.61H17.407a1.8 1.8 0 1 0 0-3.6Z' transform='translate(-3 -2.99)' fill='%232c51a9'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='a' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 22'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:%232c51a9%3B%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M21 12v10H0V3H12v2H2v15H19V12h2ZM24 0H13l4 4-7 7.1 2.8 2.8 7-7.1 4.2 4.2V0Z'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-size: 25px;
     background-position: 5%;
     margin-top: 12px;
     margin-left: 4.2%;
 }
+.dark .lien{
+    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='a' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 22'%3E%3Cdefs%3E%3Cstyle%3E.b%7Bfill:%235ac139%3B%7D%3C/style%3E%3C/defs%3E%3Cpath class='b' d='M21 12v10H0V3H12v2H2v15H19V12h2ZM24 0H13l4 4-7 7.1 2.8 2.8 7-7.1 4.2 4.2V0Z'/%3E%3C/svg%3E");
+    }
 .bgmenu__nav{
     z-index: -10;
     margin: 0;
@@ -357,6 +408,9 @@ body{
     width: 100%;
     position: relative;
 }
+.dark .footercontainer{
+    background-color: #5AC139;
+}
 #e{
     fill: #ffdc00;
 }
@@ -400,6 +454,13 @@ body{
     z-index: -10;
     padding-bottom: 0;
 }
+.dark .section__equipier{
+    background-color: #5AC139
+}
+.dark .section__equipier--information{
+    background: linear-gradient(90deg,#5AC139,90%,rgba(255, 255, 255, 0));
+}
+
 .section__equipier--kesily{
     background-image: url("images/kesily@2x.png");
     background-size: 60%;
@@ -576,6 +637,55 @@ body{
 }
 .videopro{
     width: 92%;
+}
+.dark .subNav__el a{
+    color: #1B1B1B;
+}
+.dark .credits a{
+    color: #1B1B1B;
+}
+.dark #a{
+    fill: #1B1B1B;
+}
+.dark .texte__equipeprojet{
+    background-color: #5AC139;
+}
+.dark .insta__logo{
+    fill: #1B1B1B;
+}
+.darkbout{
+    transition: cubic-bezier(0.075, 0.82, 0.165, 3);
+}
+.dark .darkbout{
+    transform: translateY(21px);
+    transition: cubic-bezier(0.075, 0.82, 0.165, 3);
+}
+.title--underline{
+    margin-left: 0;
+}
+#underline1{
+    margin-left: calc(7%);
+}
+#underline2{
+    margin-left: calc(9% + 40px);
+}
+#underline3{
+    margin-left: calc(9% + 80px);
+}
+#underline4{
+    margin-left: calc(9% + 120px);
+}
+#underline5{
+    margin-left: calc(9% + 160px);
+}
+#underline6{
+    margin-left: calc(9% + 200px);
+}
+#underline7{
+    margin-left: calc(9% + 240px);
+}
+#underline8{
+    margin-left: calc(9% + 280px);
 }
 
 
@@ -963,7 +1073,35 @@ body{
     }
     .videopro{
         width: 100%;
-    }    
+    }
+    .title--underline{
+        margin-left: 0;
+        width: 50px;
+    }
+    #underline1{
+        margin-left: calc(9%);
+    }
+    #underline2{
+        margin-left: calc(9% + 40px);
+    }
+    #underline3{
+        margin-left: calc(9% + 80px);
+    }
+    #underline4{
+        margin-left: calc(9% + 120px);
+    }
+    #underline5{
+        margin-left: calc(9% + 160px);
+    }
+    #underline6{
+        margin-left: calc(9% + 200px);
+    }
+    #underline7{
+        margin-left: calc(9% + 240px);
+    }
+    #underline8{
+        margin-left: calc(9% + 280px);
+    }
 
 
 
@@ -1569,7 +1707,40 @@ body{
         height: auto;
         margin-left: 19.7%;
         margin-top: 50px;
-    }       
+    }
+    .dark .texte__equipeprojet{
+        background-color: #5AC139;
+    }
+    .title--underline{
+        margin-left: 0;
+        width: 50px;
+    }
+    #underline1{
+        margin-left: calc(12.2%);
+    }
+    #underline2{
+        margin-left: calc(12.2% + 50px);
+    }
+    #underline3{
+        margin-left: calc(12.2% + 100px);
+    }
+    #underline4{
+        margin-left: calc(12.2% + 150px);
+    }
+    #underline5{
+        margin-left: calc(12.2% + 200px);
+    }
+    #underline6{
+        margin-left: calc(12.2% + 250px);
+    }
+    #underline7{
+        margin-left: calc(12.2% + 300px);
+    }
+    #underline8{
+        margin-left: calc(12.2% + 370px);
+    }
+    
+    
 
 
     
